refactor: Update send-oc component to handle loading state during form submission

--- a/src/app/pages/send-oc/send-oc.component.html
+++ b/src/app/pages/send-oc/send-oc.component.html
@@ -1,15 +1,20 @@
-<div class="send-oc-container">
-  <app-logo></app-logo>
-  @if(!emailSent) {
-    <h1>ENVIAR NÚMERO DE ORDEN</h1>
-    <p class="justify-center">Enviaremos el número de orden al siguientes correo: </p>
-    <form [formGroup]="sendOcForm" (ngSubmit)="sendForm()" class="align-center">
-      <input type="email" formControlName="email" placeholder="" class="email-input">
-      <button mat-raised-button color="primary" class="btn-purpple" type="submit">ENVIAR</button>
-    </form>
-  } @else {
-    <h1>¡CORREO ENVIADO!</h1>
-    <p class="justify-center">Hemos enviado el número de orden al correo</p>
-    <button mat-raised-button color="primary" class="btn-purpple" (click)="backToHome()">VOLVER AL INICIO</button>
-  }
-</div>
+@if(loading){
+ <app-validate-oc-info></app-validate-oc-info>
+} @else {
+  <div class="send-oc-container">
+    <app-logo></app-logo>
+    @if(!emailSent) {
+      <h1>ENVIAR NÚMERO DE ORDEN</h1>
+      <p class="justify-center">Enviaremos el número de orden al siguientes correo: </p>
+      <form [formGroup]="sendOcForm" (ngSubmit)="sendForm()" class="align-center">
+        <input type="email" formControlName="email" placeholder="" class="email-input">
+        <button mat-raised-button color="primary" class="btn-purpple" type="submit">ENVIAR</button>
+      </form>
+    } @else {
+      <h1>¡CORREO ENVIADO!</h1>
+      <p class="justify-center">Hemos enviado el número de orden al correo</p>
+      <button mat-raised-button color="primary" class="btn-purpple" (click)="backToHome()">VOLVER AL INICIO</button>
+    }
+  </div>
+  
+}
