--- a/src/app/pages/oc-forms-cmo/oc-forms-cmo.component.html
+++ b/src/app/pages/oc-forms-cmo/oc-forms-cmo.component.html
@@ -30,6 +30,7 @@
       [purchaseOrders]="purchaseOrders" 
       [selectedPurchaseOrders]="selectedPurchaseOrders"
       [selectOptionsPo]="getFormattedOcOptions(purchaseOrders)"
+      (saveForm)="saveForm($event)" 
     ></app-invoice-juridica-form>
   </div>
 }
