--- a/src/app/components/molecules/inf-step-two/inf-step-two.component.css
+++ b/src/app/components/molecules/inf-step-two/inf-step-two.component.css
@@ -51,3 +51,15 @@ label {
   margin-top: 20px;
   color: red;
 }
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
