--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
@@ -29,3 +29,15 @@ a {
 p {
   margin: 0 !important
 }
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
