--- a/src/app/components/molecules/inf-step-one/inf-step-one.component.html
+++ b/src/app/components/molecules/inf-step-one/inf-step-one.component.html
@@ -40,6 +40,7 @@
       [label]="'Número de documento'"
       [control]="getControl('documentNumber')"
       [type]="'number'"
+      [pattern]="'^[0-9]+$'"
       class="col-6"
     ></app-text-input>
     <app-text-input
