--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.html
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.html
@@ -73,7 +73,7 @@
     <app-subtitle [subtitle]="'Documentos solicitados'"></app-subtitle>
     <label>Factura Electrónica*</label>
     <app-filebox [control]="getControl('electronicInvoice')"></app-filebox>
-    <label>Seguridad Social*</label>
+    <label>Pago seguridad social mes vigente*</label>
     <app-filebox [control]="getControl('socialSecurity')"></app-filebox>
     <label>Planilla seguridad Social con Riesgo Laboral del Empleado</label>
     <app-filebox [control]="getControl('taxAuditorCertificate')"></app-filebox>
