--- a/src/app/components/molecules/panel-buttons/panel-buttons.component.html
+++ b/src/app/components/molecules/panel-buttons/panel-buttons.component.html
@@ -1,4 +1,6 @@
 <div class="panel-buttons-container">
-  <app-black-button name="guardar" (onClick)="saveForm.emit()"/>
+  @if(!isOc){
+    <app-black-button name="guardar" (onClick)="saveForm.emit()"/>
+  }
   <app-black-button name="cerrar sesion" (onClick)="logOut()" />
 </div>
