DATOS DE LA PERSONA QUE PRESTA EL SERVICIO

--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -3,6 +3,7 @@
   <app-initial-data [form]="juridicaForm" />
   <app-datos-empresa [form]="juridicaForm" />
   <app-datos-representante-legal [form]="juridicaForm" />
+  <app-service-provider-data [form]="juridicaForm" [lists]="lists"/>
   <app-datos-factura-electronica [form]="juridicaForm" />
   <app-datos-contabilidad [form]="juridicaForm" />
   <app-datos-fiscales [form]="juridicaForm" [lists]="lists" />
