refactor: Update buttons-wrapper styles in inf-step-one and inf-step-two components

--- a/src/app/components/molecules/inf-step-one/inf-step-one.component.css
+++ b/src/app/components/molecules/inf-step-one/inf-step-one.component.css
@@ -20,6 +20,13 @@ table {
 
 .buttons-wrapper {
   padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  
+  button {
+    width: 250px;
+  }
 }
 
 .justify-end {
