--- a/src/app/components/oc-form-success/oc-form-success.component.html
+++ b/src/app/components/oc-form-success/oc-form-success.component.html
@@ -4,6 +4,8 @@
   <div class="radicado-container">
     <span><b>#{{radicado}}</b></span>
   </div>
+  <p>Si lo desea, descargue el soporte de radicación</p>
+  <a [href]="url" class="margin-bottom"> Click Aquí</a>
   <p>Gracias por realizar su radicación, nuestro equipo hará la respectiva verificación para continuar con el proceso.</p>
   <div class="buttons-wrapper">
       <button class="btn btn-purpple" (click)="goToHome()">Cerrar</button>
