refactor: Update contract number in inf-step-two component

--- a/src/app/components/molecules/inf-step-two/inf-step-two.component.html
+++ b/src/app/components/molecules/inf-step-two/inf-step-two.component.html
@@ -31,8 +31,7 @@
         <app-text-input
           label="Número de Contrato"
           [control]="getControl('contractNumber')"
-          [pattern]="'^[0-9]+$'"
-          type="number"
+          type="text"
           class="col-6"
         ></app-text-input>
         
