refactor: Update document links in inf-step-three component

--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.css
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.css
@@ -10,6 +10,12 @@
   }
 }
 
+.link-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
 a {
   margin-left: 6px;
   text-decoration: none;
