refactor: Add link-wrapper div to display document links in inf-step-three component

--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.html
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.html
@@ -77,8 +77,10 @@
 
   @for(anexo of getOtherAnexesControls(); track $index) {
     @if(anexo.value.url) {
-      <b><p>Otros Anexos</p></b>
-      <a href="{{ anexo.value.url }}" target="_blank">Ver documento</a>
+      <div class="link-wrapper">
+        <b><p>Otros Anexos</p></b>
+        <a href="{{ anexo.value.url }}" target="_blank">Ver documento</a>
+      </div>
     }
   }
   
