refactor: Add link-wrapper div to display document links in invoice-juridica-form component

--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
@@ -41,3 +41,9 @@ p {
   align-items: center;
   justify-content: center;
 }
+
+.link-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
