refactor: Update file upload logic and deleteAnnex method in inf-step-three and invoice-juridica-form components

--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.css
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.css
@@ -25,3 +25,14 @@ a {
 p {
   margin-bottom: 0px;
 }
+
+.anexo-container {
+  position: relative !important;
+  
+  .delete-button-anexo {
+    position: absolute;
+    top: 0px;
+    right: 0;
+    border: 0px solid black !important;
+  }
+}
