--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.html
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.html
@@ -106,8 +106,17 @@
     <label>Certificado ARL / Contratista con Vinculación*</label>
     <app-filebox [control]="getControl('arlCertificate')"></app-filebox>
     @for(anexo of getOtherAnexesControls(); track $index) {
-      <label>Anexo {{$index + 1}}*</label>
-      <app-filebox [control]="anexo"></app-filebox>
+      <div class="anexo-container">
+        @if($index > 0){
+          <button type="button" class="delete-button delete-button-anexo" (click)="deleteAnnex($index)">
+            <span class="material-symbols-outlined">
+              delete
+            </span>
+          </button>
+        }
+        <label>Otros Anexos*</label>
+        <app-filebox [control]="anexo" [id]="'otherAnexes-' + $index"></app-filebox>
+      </div>
     }
     <a (click)="addNewAnexFormGroup()">+ Agregar anexo</a>
   
