--- a/src/app/components/atoms/text-input/text-input.component.html
+++ b/src/app/components/atoms/text-input/text-input.component.html
@@ -21,6 +21,15 @@
       [allowNegativeNumbers]="true"
       thousandSeparator="."
     />
+  } @else if(type === 'number') {
+    <input
+      [placeholder]="placeholder"
+      [formControl]="control"
+      type="number"
+      [pattern]="pattern || '[0-9]*'"
+      inputmode="numeric"
+      (blur)="blur()"
+    />
   } @else {
     <input
       [placeholder]="placeholder"
