--- a/src/app/components/molecules/datos-empresa/datos-empresa.component.html
+++ b/src/app/components/molecules/datos-empresa/datos-empresa.component.html
@@ -8,6 +8,8 @@
   <app-text-input
     [label]="'NIT'"
     class="col-3"
+    type="number"
+    [pattern]="nitPattern"
     [control]="getControl('document')"
   />
   <app-text-input
